# rgbe

./: .gitignore  CMakeLists.txt  setup.py
data/cmake/: FindOpenEXR.cmake
sources/: imageerrors.h  rgbe.cpp
sources/format/: format.h  openexr.h  pfm.h  rgbe.h
tests/: test_hdr.py
